<package>
  <name>ts_rviz_plugins</name>
  <version>0.0.0</version>
  <description>
     Tsuchiya is GOD.
  </description>
  <maintainer email="keitaro@todo.todo">keitaro</maintainer>
  <license>BSD</license>

<!--  <url>http://ros.org/wiki/rviz_plugin_tutorials</url>-->
<!--  <author>Dave Hershberger</author>-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>ts_msgs</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>ts_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
